[package]
name = "ci-3dslink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.3"
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs", version = "0.7.1" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs", version = "0.5.0" }
#flate2 = { version = "1.0.28", features = ["zlib"] }
